# bigballs

./: .cursorrules  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Anchor.toml  BIGBALLS_PROJECT.md  CONTEXT.md  DEV_001_PROMPT.md  DEV_CHECKPOINTS.md  PROJECT_STRUCTURE.md  README.md  SETUP_INSTRUCTIONS.md  TASK_SPECS.md  TOKEN_ECONOMICS.md  VIS_001_PROMPT.md  package.json  terminal  tsconfig.json
.devcontainer/: devcontainer.json
programs/bigballs_token/: Cargo.toml
programs/bigballs_token/src/: lib.rs  tests.rs
test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
test-ledger/rocksdb.failed/: IDENTITY  LOG  OPTIONS-000079  OPTIONS-000081
tests/: bigballs_token.ts
