[package]
name = "bigballs_token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bigballs_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = "=1.16.15"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "=1.16.15"
solana-sdk = "=1.16.15"
tokio = { version = "1.14", features = ["full"] }
